Update LinkedListQueue.java